# k8s-debug-agents

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md
.github/: pull_request_template.md
agent-task/: DESIGN.md  README.md  pyproject.toml
agent-task/src/pod_launch_task/: __init__.py  __main__.py  agent.py  findings.py  main.py  prompts.py  tools.py
charts/k8s-debug-agents/: .helmignore  Chart.yaml  values-kind.yaml  values.yaml
charts/k8s-debug-agents/templates/: NOTES.txt  _helpers.tpl  namespace.yaml  platform-namespace.yaml  tasks-namespace.yaml
charts/k8s-debug-agents/templates/credential-authz/: deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
charts/k8s-debug-agents/templates/platform/credential-authz/: authorization-policy.yaml  deployment.yaml  destination-rule.yaml  envoy-filter.yaml  peer-authentication.yaml  rbac.yaml  service-entry.yaml  service.yaml  serviceaccount.yaml  virtual-service.yaml
credential-authz/: go.mod  go.sum
credential-authz/cmd/credential-authz/: main.go
credential-authz/internal/secret/: loader.go  loader_test.go
credential-authz/internal/server/: server.go  server_test.go
docker/credential-authz/: Dockerfile
evals/: kind-config.yaml  setup.sh  teardown.sh
evals/credential-authz/: check.sh
evals/credential-flow/: check.sh  test-pod.yaml
evals/scenarios/pod-launch/: README.md  insufficient-cpu.expected.yaml  insufficient-cpu.yaml  pdb-blocks-scaling.expected.yaml  pdb-blocks-scaling.yaml  pdb-rolling-update-deadlock.expected.yaml  pdb-rolling-update-deadlock.yaml  quota-exceeded.expected.yaml  quota-exceeded.yaml  taint-toleration-mismatch.expected.yaml  taint-toleration-mismatch.yaml
evals/smoke-test/: pod.yaml
